Change default modalUserLocked icon to fa-unlock

--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -51,7 +51,7 @@
                 <!-- locked -->
                 <div class="row">
                     <div class="input-field col s12 checkbox-container">
-                        <i class="fas fa-lock prefix light-blue-text text-darken-4"></i>
+                        <i id="modalUserLockedIcon" class="fas fa-unlock prefix light-blue-text text-darken-4"></i>
                         <label id="modalUserLocked">
                             <input id="modalUserLockedInput" name="locked" type="checkbox"/>
                             <span>User Locked?</span>
