--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -104,6 +104,44 @@
     <h3 class="light-blue-text text-darken-4 center-align">Manage Users</h3>
     <div class="row">
         <div class="col s12">
+            <ul class="collapsible collapsible-search light-blue-text text-darken-4">
+                <li>
+                    <!-- Search -->
+                    <div class="collapsible-header"><i class="fas fa-search"></i><span>Search</span></div>
+                    <div class="collapsible-body">
+                        <div class="user-search">
+                            <!-- user id search-->
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <i class="fas fa-user prefix light-blue-text text-darken-4"></i>
+                                    <input id="userIdSearch" name="userIdSearch" type="text" minlength="2" value="" class="validate">
+                                    <label for="userIdSearch" data-error="Please Enter at least 2 Characters." data-default="User Search">User Search</label>
+                                </div>
+                            </div>
+                            <!-- search button -->
+                            <div class="row search-action-container">
+                                <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onclick="getSearchResults(this)">
+                                    Search <i class="fas fa-sign-in-alt"></i>
+                                </button>
+                            </div>
+                            <ul class="collapsible">
+                                <div class="results-control hidden">
+                                    <a href="#" onclick="getRecord('first', this);">First</a>
+                                    <a href="#" onclick="getRecord('prev', this);">Prev</a>
+                                    <input class="pageNumber browser-default" name="pageNumber" type="text" minlength="1" maxlength="4" pattern="^[0-9]{1,4}$" value="1">
+                                    <span>of</span>
+                                    <span class="totalPages"></span>
+                                    <a href="#" onclick="getRecord('next', this);">Next</a>
+                                    <a href="#" onclick="getRecord('last', this);">Last</a>
+                                </div>                                                    
+                                <div id="userSearchResults" class="results-data">
+                                    <!--returned records go here-->
+                                </div>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+            </ul>
             <ul class="collapsible collapsible-role-groups light-blue-text text-darken-4">
                 {% for role_group in role_groups %}
                 <li>
