--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@
 
 .collapsible-header .col strong, .dummy-collapsible-header .col strong {
     margin: 5px;
-    line-height: 42px;   
+    line-height: 42px;
 }
 
 nav .fa-caret-down {
@@ -68,7 +68,7 @@ form .modal-content .row, form .user-search .row {
     padding-right: 0;
     font-size: 2rem;
     text-align: right;
-    margin-top: -.5rem;  
+    margin-top: -.5rem;
 }
 
 form .modal-content .input-field, form .user-search .input-field {
@@ -91,7 +91,7 @@ form .user-search .search-radio-row {
     height: calc(3rem + 1px);
     line-height: calc(3rem + 1px);
     border-bottom: 1px solid #9e9e9e;
-	margin-bottom: 8px;	
+	margin-bottom: 8px;
     margin-top: -1rem;
 }
 
@@ -159,7 +159,7 @@ form .user-search .search-radio-row {
     text-align: center;
 }
 
-.results-control * {    
+.results-control * {
     font-size: 1rem !important;
 }
 
@@ -182,6 +182,11 @@ form .user-search .search-radio-row {
 
 .results-control .pageNumber:focus {
     border-color: #01579b;
+}
+
+.search-action-container {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 .search-no-results {
