Changed search button icon to fa-search

--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -121,7 +121,7 @@
                             <!-- search button -->
                             <div class="row search-action-container">
                                 <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onclick="getSearchResults(this)">
-                                    Search <i class="fas fa-sign-in-alt"></i>
+                                    Search <i class="fas fa-search"></i>
                                 </button>
                             </div>
                             <ul class="collapsible">
