--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <!-- top navbar -->
          <nav class="nav-extended text-shadow light-blue darken-1">
             <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Pimp My Quiz!</a>
+            <a href="#" class="nav-title">Pimp My Quiz!</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#">Home</a></li>
@@ -82,9 +82,9 @@
             {% endif %}
         {% endwith %}
     </section>
-    
+
     <main class="container">
-        {% block content %}    
+        {% block content %}
         {% endblock %}
     </main>
 
