Altered editUserModal save button icon to fa-user-check

--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -93,7 +93,7 @@
                 <!-- save changes -->
                 <div class="row modal-action-container">
                     <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onsubmit="return modalValidate();">
-                        Save Changes <i class="fas fa-sign-in-alt"></i>
+                        Save Changes <i class="fas fa-user-check"></i>
                     </button>
                 </div>
             </div>
