Corrected sidenav title text

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 
         <!-- mobile sidenav -->
         <ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align light-blue-text text-darken-4">Task Manager</h4></li>
+            <li><h4 class="center-align light-blue-text text-darken-4">Pimp My Quiz!</h4></li>
             <li><a href="#">Home</a></li>
             {% if session.user %}
                 <li><a href="#">Profile</a></li>
