--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -115,7 +115,7 @@
                                 <div class="input-field col s12">
                                     <i class="fas fa-user prefix light-blue-text text-darken-4"></i>
                                     <input id="userSearch" name="userSearch" type="text" minlength="2" value="" class="validate">
-                                    <label for="userSearch" data-error="Please Enter at least 2 Characters." data-default="User Search">User Search</label>
+                                    <label class="truncate" for="userSearch" data-error="Please Enter at least 2 Characters." data-default="User Search">User Search</label>
                                 </div>
                             </div>
                             <!-- search button -->
